# rust_gaming_engine

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: mesh_generation.rs  world_generation.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SYSTEMS.md  TODO.md
scripts/: pre-commit
src/: lib.rs  main.rs
src/engine/: app.rs  camera.rs  chunk_renderer.rs  fps_counter.rs  input.rs  mod.rs  overlay.rs  renderer.rs  window.rs  wireframe.rs
src/engine/shaders/: block.wgsl  overlay.wgsl  wireframe.wgsl
src/world/: block.rs  chunk.rs  chunk_manager.rs  mesh.rs  mod.rs  raycast.rs  texture_atlas.rs
