[package]
name = "voxel-forge"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance voxel game engine inspired by Minecraft and Hytale"
license = "MIT"
repository = "https://github.com/yourusername/voxel-forge"
readme = "README.md"
keywords = ["game", "voxel", "minecraft", "engine", "graphics"]
categories = ["game-engines", "games", "graphics", "rendering"]

[lib]
name = "voxel_forge"
path = "src/lib.rs"

[[bin]]
name = "voxel-forge"
path = "src/main.rs"

[dependencies]
# Graphics & Windowing
wgpu = "24"
winit = "0.30"
raw-window-handle = "0.6"

# Math & Linear Algebra
glam = { version = "0.29", features = ["serde"] }
noise = "0.9"

# ECS
bevy_ecs = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Networking
quinn = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Utilities
bytemuck = { version = "1", features = ["derive"] }
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.10"

# Audio (optional - requires libasound2-dev on Linux)
rodio = { version = "0.19", optional = true }

# Image Loading
image = "0.25"

# Async utilities
pollster = "0.4"

[features]
default = []
audio = ["rodio"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
test-case = "3"

[[bench]]
name = "world_generation"
harness = false

[[bench]]
name = "mesh_generation"
harness = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some common patterns
module_name_repetitions = "allow"
too_many_lines = "allow"
# Transitive dependencies have multiple versions - out of our control
multiple_crate_versions = "allow"
# These are overly pedantic for our codebase
similar_names = "allow"
unreadable_literal = "allow"
while_float = "allow"
missing_const_for_fn = "allow"
